apps/production/linkding/deployment-postgres-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  template:
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.46.2
